--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/v3/favicon.ico" />
+    <link rel="icon" href="/v3tw/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/v3tw/img/icons/apple-touch-icon.png">
     <title>Vite App</title>
-    <script type="module" crossorigin src="/v3/assets/index.f3d1105a.js"></script>
-    <link rel="stylesheet" href="/v3/assets/index.22383914.css">
-  <link rel="manifest" href="/v3/manifest.webmanifest"></head>
+    <script type="module" crossorigin src="/v3tw/assets/index.b9f15be5.js"></script>
+    <link rel="stylesheet" href="/v3tw/assets/index.4eb8c104.css">
+  <link rel="manifest" href="/v3tw/manifest.webmanifest"></head>
   <body>
     <div id="app"></div>
     
