--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/v3tw/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/v3tw/img/icons/apple-touch-icon.png">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/v3tw/img/icons/apple-touch-icon.png"
+    />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/v3tw/assets/index.b9f15be5.js"></script>
-    <link rel="stylesheet" href="/v3tw/assets/index.4eb8c104.css">
+    <script type="module" crossorigin src="/v3tw/assets/index.64fef047.js"></script>
+    <link rel="stylesheet" href="/v3tw/assets/index.9506d1ab.css">
   <link rel="manifest" href="/v3tw/manifest.webmanifest"></head>
-  <body>
+  <body class="bg-slate-50 dark:bg-slate-800">
     <div id="app"></div>
     
   </body>
