Add 404 html to build folder

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- NOTE: Made sure any changes here are also made to public/404.html to allow for dynamic routing on github pages -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
