Try to build with 404 file

--- a/public/404.html
+++ b/public/404.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/v3tw/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/v3tw/img/icons/apple-touch-icon.png"
+      href="/img/icons/apple-touch-icon.png"
     />
     <title>404</title>
   </head>
   <body class="bg-slate-50 dark:bg-slate-800">
     <div id="app"></div>
-    <script type="module" src="/v3tw/src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
