--- a/public/404.html
+++ b/public/404.html
@@ -1,4 +1,3 @@
-<!-- NOTE: Made sure any changes here are also made to public/404.html to allow for dynamic routing on github pages -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,7 +9,7 @@
       sizes="180x180"
       href="/v3tw/img/icons/apple-touch-icon.png"
     />
-    <title>Vite App</title>
+    <title>404</title>
     <script type="module" crossorigin src="/v3tw/assets/main.2437be33.js"></script>
     <link rel="stylesheet" href="/v3tw/assets/main.823e5fff.css">
   <link rel="manifest" href="/v3tw/manifest.webmanifest"></head>
