--- a/404.html
+++ b/404.html
@@ -2,17 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/v3tw/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/img/icons/apple-touch-icon.png"
+      href="/v3tw/img/icons/apple-touch-icon.png"
     />
     <title>404</title>
-  </head>
+    <script type="module" crossorigin src="/v3tw/assets/main.2437be33.js"></script>
+    <link rel="stylesheet" href="/v3tw/assets/main.823e5fff.css">
+  <link rel="manifest" href="/v3tw/manifest.webmanifest"></head>
   <body class="bg-slate-50 dark:bg-slate-800">
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    
   </body>
 </html>
