--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <title>Vite App</title>
   </head>
-  <body class="bg-slate-50 dark:bg-slate-800">
+  <body class="bg-slate-50 transition-none dark:bg-slate-800">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
