--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       href="/v3tw/img/icons/apple-touch-icon.png"
     />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/v3tw/assets/main.76221c07.js"></script>
-    <link rel="stylesheet" href="/v3tw/assets/main.1a58ae74.css">
+    <script type="module" crossorigin src="/v3tw/assets/main.92c369fc.js"></script>
+    <link rel="stylesheet" href="/v3tw/assets/main.b1798e28.css">
   <link rel="manifest" href="/v3tw/manifest.webmanifest"></head>
-  <body class="bg-slate-50 dark:bg-slate-800">
+  <body class="bg-slate-50 transition-none dark:bg-slate-800">
     <div id="app"></div>
     
   </body>
